# Project-Walnut

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  main.cpp  utils.cpp  utils.h
core/: Request.cpp  Request.h  Server.cpp  Server.h  Socket.cpp  Socket.h
http/: Header.cpp  Header.h  Request.cpp  Request.h  Response.cpp  Response.h  http.h
www/: index.html  notFound.html  test.html  test.json
